--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title> Nueva pagina</title>
+  <title> Nueva página</title>
 </head>
 <body> 
-  <h1> Bienvenido a la vista </h1>
+  <h1> Bienvenido a la Vista </h1>
 </body>
 </html>
