--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-  <title> Nueva pagina</title>
+  <title>Nuestra primera Vista</title>
 </head>
-<body> 
+<body>
   <h1> Bienvenido a la vista </h1>
 </body>
 </html>
